--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-
   <title>PlayMusic</title>
 </head>
 <body>
@@ -70,9 +69,12 @@
     </div>
     <div class="buttons">
       <div class="description">
+        <div class="visitas">
          <h4> UNLIMITS- リリー</h4>
-      <p class="vistas">124,886 vistas</p>
-      </div>
+         <p class="vistas">124,886 vistas</p>
+         </div>
+         <div class="likestart" id="likestart"></div>
+    </div>
     <div class="action">
       <ul>
       <li><button class="add">Agregar </button></li>
@@ -94,9 +96,11 @@
       </div>
     </div>
     <div class="comments">
-      <h2>Comentarios</h2>
+      <h2 class="h2">Comentarios</h2>
+      <div class="caja">
       <img class="image-com" src="images/avatar.jpg" alt="" width="35" height="35">
       <input type="text" name="" value="" placeholder="Agregar comentario">
+      </div>
      <div class="comentario">
         <a href="" class="avatar">
         <img src="images/avatar3.jpg" alt="">
@@ -113,7 +117,7 @@
         <img src="images/avatar2.jpg" alt="">
         </a>
         <div class="nombre">
-        <span>Andres Jimenez</span>
+        <span>Mary Smith</span>
          </div>
         <div class="com">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
@@ -124,7 +128,7 @@
         <img src="images/avatar3.jpg" alt="">
         </a>
         <div class="nombre">
-        <span>Andres Jimenez</span>
+        <span>Frank Ruz</span>
          </div>
         <div class="com">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
@@ -146,28 +150,24 @@
         <img src="images/avatar2.jpg" alt="">
         </a>
         <div class="nombre">
-        <span>Andres Jimenez</span>
+        <span>Liz Gil</span>
          </div>
         <div class="com">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
        </div>
      </div>
-
    </div>
     <div class="viewmore">
        <h2 class="link">Sugerencias</h2>
        <img src="images/1.jpg" alt="">
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing, consectetur adipisicing, consectetur adipisicing</p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing, consectetur adipisicing, consectetur adipisicing</p>
        <img src="images/2.jpg" alt="">
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
         <img src="images/1.jpg" alt="">
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
     </div>
-
   </main>
     <script src="main.js"></script>
       <link rel="stylesheet" href="css/main.css">
-
 </body>
-
 </html>
